--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,7 +48,7 @@
   }
 
   function sendCommand(cmd) {
-    fetch('https://YOUR-NGROK-URL/api/server/' + cmd, { method: 'POST' })
+    fetch('https://4523-2001-16a2-c0d9-9d95-9813-7203-7b76-28de.ngrok-free.app/api/server/' + cmd, { method: 'POST' })
       .then(res => res.text()).then(alert).catch(() => alert('Failed to send command!'));
   }
 </script>
