--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
   }
 
   function sendCommand(cmd) {
-    fetch('https://4523-2001-16a2-c0d9-9d95-9813-7203-7b76-28de.ngrok-free.app/api/server/' + cmd, { method: 'POST' })
-      .then(res => res.text()).then(alert).catch(() => alert('Failed to send command!'));
+    const ngrokUrl = 'https://4523-2001-16a2-c0d9-9d95-9813-7203-7b76-28de.ngrok-free.app'; // Replace with your Ngrok URL
+    fetch(ngrokUrl + '/api/server/' + cmd, { method: 'POST' })
+      .then(res => res.text())
+      .then(response => alert(response))
+      .catch(() => alert('Failed to send command!'));
   }
 </script>
 
